[package]
name = "sloth"
version = "0.1.0"
edition = "2021"
description = "A tiny CLI for linking sibling repositories into your current folder."
license = "MIT"

[[bin]]
name = "sloth"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = { version = "0.12.0", default-features = false }
pathdiff = "0.2.3"

[dev-dependencies]
tempfile = "3.27.0"
